--- a/index.html
+++ b/index.html
@@ -12,8 +12,148 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <!-- custom css -->
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <!-- header-area -->
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light mb-5">
+        <div class="container bg-light py-3 fixed-top">
+          <a class="navbar-brand" href="#">
+            <img src="images/logo.png" alt="" />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Shoes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Backpack </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Subscribe</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- slider images -->
+      <section class="container my-5">
+        <div
+          id="carouselExampleControls"
+          class="carousel slide p-5 slider-bg rounded"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="row">
+                <div class="col-12 col-lg-7 mb-5">
+                  <div
+                    class="d-flex flex-column justify-content-center align-items-start h-100"
+                  >
+                    <h1 class="fs-2 fw-bold">Cool Dude Headphone</h1>
+                    <p class="fs-5">
+                      This is the best headphone in the world for people who
+                      just want to waste time in front of funky world.
+                    </p>
+                    <h1 class="fs-2 fw-bold price-color">$420</h1>
+                    <button class="btn button-color">Buy Now</button>
+                  </div>
+                </div>
+                <div class="col-12 col-lg-5">
+                  <img
+                    src="images/banner-images/headphone.png"
+                    class="d-block img-fluid"
+                    alt="Head phone"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row">
+                <div class="col-12 col-lg-7 mb-5">
+                  <div
+                    class="d-flex flex-column justify-content-center align-items-start h-100"
+                  >
+                    <h1 class="fs-2 fw-bold">X-Box for your living room</h1>
+                    <p class="fs-5">
+                      This is the best x-box in the world for people who just
+                      want to waste time in front of fake sports.
+                    </p>
+                    <h1 class="fs-2 fw-bold price-color">$600</h1>
+                    <button class="btn button-color">Buy Now</button>
+                  </div>
+                </div>
+                <div class="col-12 col-lg-5">
+                  <img
+                    src="images/banner-images/xbox.png"
+                    class="d-block img-fluid"
+                    alt="Xbox phone"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row">
+                <div class="col-12 col-lg-7 mb-5">
+                  <div
+                    class="d-flex flex-column justify-content-center align-items-start h-100"
+                  >
+                    <h1 class="fs-2 fw-bold">Mega LCD TV For Sports</h1>
+                    <p class="fs-5">
+                      This is the best tv in the world for people who just want
+                      to waste time in front of tv.
+                    </p>
+                    <h1 class="fs-2 fw-bold price-color">$1200</h1>
+                    <button class="btn button-color">Buy Now</button>
+                  </div>
+                </div>
+                <div class="col-12 col-lg-5">
+                  <img
+                    src="images/banner-images/tv.png"
+                    class="d-block img-fluid"
+                    alt="Tv phone"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleControls"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </section>
+    </header>
     <!-- bootstrap script -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
