--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   <img
                     src="images/banner-images/xbox.png"
                     class="d-block img-fluid"
-                    alt="Xbox phone"
+                    alt="Xbox"
                   />
                 </div>
               </div>
@@ -127,7 +127,7 @@
                   <img
                     src="images/banner-images/tv.png"
                     class="d-block img-fluid"
-                    alt="Tv phone"
+                    alt="Tv"
                   />
                 </div>
               </div>
@@ -154,6 +154,45 @@
         </div>
       </section>
     </header>
+    <main>
+      <!-- categories section -->
+      <section class="container mt-5 mb-5">
+        <div class="row categories">
+          <div class="col-12 col-md-6 col-lg-4 mb-4">
+            <div
+              class="item-1 d-flex justify-content-between align-items-center rounded-3 p-4"
+            >
+              <h1 class="display-5 fw-bold text-white">Watch</h1>
+              <img
+                width="100px"
+                src="images/categories/watch.png"
+                alt="watch"
+              />
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 mb-4">
+            <div
+              class="item-2 d-flex justify-content-between align-items-center rounded-3 p-4"
+            >
+              <h1 class="display-5 fw-bold text-white">Bag</h1>
+              <img width="100px" src="images/categories/bag.png" alt="watch" />
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 mb-4">
+            <div
+              class="item-3 d-flex justify-content-between align-items-center rounded-3 p-4"
+            >
+              <h1 class="display-5 fw-bold text-white">Shoes</h1>
+              <img
+                width="100px"
+                src="images/categories/shoes.png"
+                alt="watch"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <!-- bootstrap script -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
