--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <div
               class="item-1 d-flex justify-content-between align-items-center rounded-3 p-4"
             >
-              <h1 class="display-5 fw-bold text-white">Watch</h1>
+              <h1 class="display-6 fw-bold text-white">Watch</h1>
               <img
                 width="100px"
                 src="images/categories/watch.png"
@@ -174,7 +174,7 @@
             <div
               class="item-2 d-flex justify-content-between align-items-center rounded-3 p-4"
             >
-              <h1 class="display-5 fw-bold text-white">Bag</h1>
+              <h1 class="display-6 fw-bold text-white">Bag</h1>
               <img width="100px" src="images/categories/bag.png" alt="watch" />
             </div>
           </div>
@@ -182,12 +182,78 @@
             <div
               class="item-3 d-flex justify-content-between align-items-center rounded-3 p-4"
             >
-              <h1 class="display-5 fw-bold text-white">Shoes</h1>
+              <h1 class="display-6 fw-bold text-white">Shoes</h1>
               <img
                 width="100px"
                 src="images/categories/shoes.png"
                 alt="watch"
               />
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- shose section -->
+      <section class="container mb-5">
+        <div class="row g-4">
+          <h1 class="fs-2 mb-5">Shose</h1>
+          <div class="col-12 col-md-6 col-lg-4 mb-4">
+            <div class="panda-product h-100 border-0">
+              <img
+                src="images/shoes/shoe-1.png"
+                class="card-img-top img-fluid"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Supply 350</h5>
+                <p class="card-text">
+                  This is a longer card with supporting text below as a natural
+                  lead-in to additional.
+                </p>
+                <h5>$120</h5>
+              </div>
+              <div class="ps-3 pb-3 border-0">
+                <button class="btn button-color">Buy Now >></button>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 mb-4">
+            <div class="panda-product h-100 border-0">
+              <img
+                src="images/shoes/shoe-2.png"
+                class="card-img-top img-fluid"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Nike 360</h5>
+                <p class="card-text">
+                  This is a longer card with supporting text below as a natural
+                  lead-in to additional.
+                </p>
+                <h5>$320</h5>
+              </div>
+              <div class="ps-3 pb-3 border-0">
+                <button class="btn button-color">Buy Now >></button>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 mb-4">
+            <div class="panda-product h-100 border-0">
+              <img
+                src="images/shoes/shoe-3.png"
+                class="card-img-top img-fluid"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Red Airmax</h5>
+                <p class="card-text">
+                  This is a longer card with supporting text below as a natural
+                  lead-in to additional.
+                </p>
+                <h5>$350</h5>
+              </div>
+              <div class="ps-3 pb-3 border-0">
+                <button class="btn button-color">Buy Now >></button>
+              </div>
             </div>
           </div>
         </div>
