--- a/index.html
+++ b/index.html
@@ -258,6 +258,72 @@
           </div>
         </div>
       </section>
+      <!-- bags section -->
+      <section class="container mb-5">
+        <div class="row g-4">
+          <h1 class="fs-2 mb-5">Backpack</h1>
+          <div class="col-12 col-md-6 col-lg-4 mb-4">
+            <div class="panda-product h-100 border-0">
+              <img
+                src="images/bags/bag-1.png"
+                class="card-img-top img-fluid"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Red Laltu Bag</h5>
+                <p class="card-text">
+                  This is a longer card with supporting text below as a natural
+                  lead-in to additional.
+                </p>
+                <h5>$120</h5>
+              </div>
+              <div class="ps-3 pb-3 border-0">
+                <button class="btn button-color">Buy Now >></button>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 mb-4">
+            <div class="panda-product h-100 border-0">
+              <img
+                src="images/bags/bag-2.png"
+                class="card-img-top img-fluid"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Blue Niltu Bag</h5>
+                <p class="card-text">
+                  This is a longer card with supporting text below as a natural
+                  lead-in to additional.
+                </p>
+                <h5>$320</h5>
+              </div>
+              <div class="ps-3 pb-3 border-0">
+                <button class="btn button-color">Buy Now >></button>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 mb-4">
+            <div class="panda-product h-100 border-0">
+              <img
+                src="images/bags/bag-3.png"
+                class="card-img-top img-fluid"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Black Kaltu Bag</h5>
+                <p class="card-text">
+                  This is a longer card with supporting text below as a natural
+                  lead-in to additional.
+                </p>
+                <h5>$169</h5>
+              </div>
+              <div class="ps-3 pb-3 border-0">
+                <button class="btn button-color">Buy Now >></button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- bootstrap script -->
     <script
