--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Shoes</a>
+                <a class="nav-link" href="#shoes">Shoes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Backpack </a>
+                <a class="nav-link" href="#bags">Backpack </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Subscribe</a>
+                <a class="nav-link" href="#subscribe">Subscribe</a>
               </li>
             </ul>
           </div>
@@ -193,7 +193,7 @@
         </div>
       </section>
       <!-- shose section -->
-      <section class="container mb-5">
+      <section class="container mb-5" id="shoes">
         <div class="row g-4">
           <h1 class="fs-2 mb-5">Shose</h1>
           <div class="col-12 col-md-6 col-lg-4 mb-4">
@@ -259,7 +259,7 @@
         </div>
       </section>
       <!-- bags section -->
-      <section class="container mb-5">
+      <section class="container mb-5" id="bags">
         <div class="row g-4">
           <h1 class="fs-2 mb-5">Backpack</h1>
           <div class="col-12 col-md-6 col-lg-4 mb-4">
@@ -321,6 +321,21 @@
                 <button class="btn button-color">Buy Now >></button>
               </div>
             </div>
+          </div>
+        </div>
+      </section>
+      <!-- subscribe area -->
+      <section class="container" id="subscribe">
+        <div class="subscribe d-flex align-items-center justify-content-center">
+          <div>
+            <h3 class="fw-bold">LET'S STAY IN TOUCH</h3>
+            <h6>Get updates on sales, specials and more</h6>
+            <input
+              class="form-control mt-3"
+              type="text"
+              placeholder="Your Email"
+            />
+            <button class="btn button-color mt-3">SUBMIT</button>
           </div>
         </div>
       </section>
