--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
         </div>
       </section>
       <!-- subscribe area -->
-      <section class="container" id="subscribe">
+      <section class="container mb-5" id="subscribe">
         <div class="subscribe d-flex align-items-center justify-content-center">
           <div>
             <h3 class="fw-bold">LET'S STAY IN TOUCH</h3>
@@ -340,6 +340,12 @@
         </div>
       </section>
     </main>
+    <!-- footer area -->
+    <footer class="footer text-center p-4">
+      <small>
+        ©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.
+      </small>
+    </footer>
     <!-- bootstrap script -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
