--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
       <!-- subscribe area -->
       <section class="container mb-5" id="subscribe">
         <div class="subscribe d-flex align-items-center justify-content-center">
-          <div>
+          <div class="p-3">
             <h3 class="fw-bold">LET'S STAY IN TOUCH</h3>
             <h6>Get updates on sales, specials and more</h6>
             <input
